# hanne-is-leuk-bot

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  sqlx-data.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml
migrations/: 20221226142807_initial.down.sql  20221226142807_initial.up.sql
src/: database.rs  formatter.rs  lib.rs  main.rs  schedule_parser.rs  scheduler.rs
src/commands/: exam.rs  exams.rs  mod.rs  parse.rs  settings.rs
