[package]
name = "hanne-is-leuk-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
poise = { version = "0.5.2", features = ["cache"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "http",
    "rustls_backend",
    "model",
    "builder",
] }
dotenvy = "0.15.6"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "offline",
    "chrono",
] }
chrono = "0.4.23"
chrono-tz = "0.8.1"
regex = "1.7.0"
lazy_static = "1.4.0"
env_logger = "0.10.0"
log = "0.4.17"
